pkg/reconciler/instances/busola-migrator/test_files/virtual-service.yaml
{
  "apiVersion": "networking.istio.io/v1alpha3",
  "kind": "VirtualService",
  "metadata": {
    "annotations": {
      "meta.helm.sh/release-name": "dex",
      "meta.helm.sh/release-namespace": "kyma-system"
    },
    "creationTimestamp": "2021-07-08T10:16:09Z",
    "generation": 1,
    "labels": {
      "app": "dex",
      "app.kubernetes.io/managed-by": "Helm",
      "chart": "dex-1.0.0"
    },
    "managedFields": [
      {
        "apiVersion": "networking.istio.io/v1alpha3",
        "fieldsType": "FieldsV1",
        "fieldsV1": {
          "f:metadata": {
            "f:annotations": {
              ".": {},
              "f:meta.helm.sh/release-name": {},
              "f:meta.helm.sh/release-namespace": {}
            },
            "f:labels": {
              ".": {},
              "f:app": {},
              "f:app.kubernetes.io/managed-by": {},
              "f:chart": {}
            }
          },
          "f:spec": {
            ".": {},
            "f:gateways": {},
            "f:hosts": {},
            "f:http": {}
          }
        },
        "manager": "Go-http-client",
        "operation": "Update",
        "time": "2021-07-08T10:16:09Z"
      }
    ],
    "name": "dex-virtualservice",
    "namespace": "kyma-system",
    "resourceVersion": "5374",
    "uid": "a0e433e1-2ad5-4dc2-8e4b-0a23ac92e41f"
  },
  "spec": {
    "gateways": [
        "kyma-system/kyma-gateway"
    ],
    "hosts": [
        "my-domain.kyma.io"
    ],
    "http": [
      {
        "corsPolicy": {
          "allowOrigins": [
            {
              "regex": ".*"
            }
          ]
        },
        "match": [
          {
            "uri": {
              "regex": "/.*"
            }
          }
        ],
        "route": [
          {
            "destination": {
              "host": "dex-service",
              "port": {
                "number": 5556
              }
            },
            "headers": {
              "response": {
                "add": {
                  "Vary": "Origin"
                }
              }
            }
          }
        ]
      }
    ]
  }
}
